test/corpus/component.txt
===========================
Port named if
===========================
component A {
    requires I if;
    behavior {
        on if.e: {
            if.bla();
        }
    }
}
---
(root
    (component
        (scoped_name)
        (port
            (port_direction)
            (compound_name
                (identifier))
            (name))
        (behavior
            (behavior_body
                (on
                    (triggers
                        (trigger
                            (compound_name
                                (identifier)
                                (identifier))))
                    (compound
                        (call_statement
                            (call
                                (compound_name
                                    (identifier)
                                    (identifier))
                                (arguments)))))))))
